
  - Fix interpretation of Builder source arguments when the Builder has
    a src_suffix *and* a source_builder and the argument has no suffix.

  - Fix use of expansions like ${TARGET.dir} or ${SOURCE.dir} in the
    following construction variables:  $FORTRANMODDIR, $JARCHDIR,
    $JARFLAGS, $LEXFLAGS, $SWIGFLAGS, $SWIGOUTDIR and $YACCFLAGS.

  From Leanid Nazdrynau:

  - When applying Tool modules after a construction environment has
    already been created, don't overwrite existing $CFILESUFFIX and
    $CXXFILESUFFIX value.

  - Support passing the Java() builder a list of explicit .java files
    (not only a list of directories to be scanned for .java files).

  - Support passing .java files to the Jar() and JavaH() builders, which
    then use the builder underlying the Java() builder to turn them into
    .class files.  (That is, the Jar()-Java() chain of builders become
    multi-step, like the Program()-Object()-CFile() builders.)

  - Support passing SWIG .i files to the Java builders (Java(),
    Jar(), JavaH()), to cause intermediate .java files to be created
    automatically.

  - Add $JAVACLASSPATH and $JAVASOURCEPATH variables, that get added to
    the javac "-classpath" and "-sourcepath" options.  (Note that SCons
    does *not* currently search these paths for implicit dependencies.)

  - Commonize initialization of Java-related builders.

  From Jan Nijtmans:

  - Find Java anonymous classes when the next token after the name is
    an open parenthesis.

  From Tilo Prutz:

  - Add support for the file names that Java 1.5 (and 1.6) generates for
    nested anonymous inner classes, which are different from Java 1.4.

  From Adam Simpkins:

  - Allow worker threads to terminate gracefully when all jobs are
    finished.

  From Sohail Somani:

  - Add LaTeX scanner support for finding dependencies specified with
    the \usepackage{} directive.



RELEASE 0.97 - Thu, 17 May 2007 08:59:41 -0500

  From Steven Knight:
