@@ -69,7 +69,8 @@ def _swigEmitter(target, source, env):
             outdir = env.subst('$SWIGOUTDIR', target=target, source=source)
             if outdir:
                  java_files = map(lambda j, o=outdir: os.path.join(o, j), java_files)
-            for jf in map(env.fs.File, java_files):
+            java_files = map(env.fs.File, java_files)
+            for jf in java_files:
                 t_from_s = lambda t, p, s, x: t.dir
                 SCons.Util.AddMethod(jf, t_from_s, 'target_from_source')
             target.extend(java_files)
@@ -98,7 +99,7 @@ def generate(env):
     env['SWIGFLAGS']         = SCons.Util.CLVar('')
     env['SWIGCFILESUFFIX']   = '_wrap$CFILESUFFIX'
     env['SWIGCXXFILESUFFIX'] = '_wrap$CXXFILESUFFIX'
-    env['_SWIGOUTDIR']       = '${"-outdir " + SWIGOUTDIR}'
+    env['_SWIGOUTDIR']       = '${"-outdir " + str(SWIGOUTDIR)}'
     env['SWIGPATH']          = []
     env['SWIGINCPREFIX']     = '-I'
     env['SWIGINCSUFFIX']     = ''
