@@ -83,6 +83,9 @@ RELEASE 0.97.X - XXX
     following construction variables:  $FORTRANMODDIR, $JARCHDIR,
     $JARFLAGS, $LEXFLAGS, $SWIGFLAGS, $SWIGOUTDIR and $YACCFLAGS.
 
+  - Fix dependencies on Java files generated by SWIG so they can be
+    detected and built in one pass.
+
   From Leanid Nazdrynau:
 
   - When applying Tool modules after a construction environment has
